--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -33,10 +33,10 @@
                         <td class="uk-text-break">{{ product.customer }}</td>
                         <td class="">2021-05-23</td>
                         <th class="">
-                                <button class="uk-badge" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="В работе" >1</button>
-                                <button class="uk-badge" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Сделано" >2</button>
-                                <button class="uk-badge" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Ожидает оплаты" >3</button>
-                                <button class="uk-badge" style="background-color: red;border-color: red; padding: 10%; margin: 2px;" uk-tooltip="Отказ" >4</button> 
+                                <button class="uk-badge" type="submit" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="В работе" >1</button>
+                                <button class="uk-badge" type="submit" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Сделано" >2</button>
+                                <button class="uk-badge" type="submit" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Ожидает оплаты" >3</button>
+                                <button class="uk-badge" type="submit" style="background-color: red;border-color: red; padding: 10%; margin: 2px;" uk-tooltip="Отказ" >4</button> 
                         </th>
                         <td class="uk-text-break">
                             <button name="" form="products_in_work_id" type="button"
