--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="uk-margin-large-left uk-margin-medium-top uk-flex">
-    <div style="width: 20%">
+    <div style="width: 20%; height: 100%;">
             <div class="uk-margin-small-left">
                 <h4 class="uk-margin-small-bottom">Электроника - Смартфоны</h4>
                 <h2 class="uk-margin-medium-bottom uk-margin-small-top">Смартфоны</h2>
@@ -116,7 +116,7 @@
 
     <br>
     <br>
-        <div id="content" class="row" style="align-items: center;margin: 50px; width: 80%;" >
+        <div id="content" class="" style="align-items: center;margin: 50px; width: 80%;">
             {% include "baseProductCard.html" %}
 
         </div>
