--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -28,8 +28,8 @@
             <br>
             <br>
 
-            <button class="uk-button uk-button-default uk-width-1-2 uk-border-rounded" href="{{ product.id }}"
-                style="background-color:  #2D3995; color: white; ">ПОДРОБНЕЕ</button>
+            <a class="uk-button uk-button-default uk-width-1-2 uk-border-rounded" href="{{ product.id }}"
+                style="background-color:  #2D3995; color: white; ">ПОДРОБНЕЕ</a>
         </div>
     </div>
 </div>
