cardProduct.html fix orders.html yourTasks.html fix

--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -175,7 +175,7 @@
 
                     </div>
                 </div>
-                <button stydiv"color: black; background-color:darkgray"
+                <button style="color: black; background-color:darkgray"
                     class="uk-button uk-border-pill uk-width-1-1 uk-margin-small-bottom">Показать коннтакты
                     продавца</button>
             </div>
