--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -101,19 +101,36 @@
                     <div>
                         <button class="uk-button buttonStyle">Чат с продавцом</button>
                     </div>
-                    <div>
-                        <button class="uk-button buttonStyle" style="width: 80%">Оплатить товар</button>
+                    <div><a class="uk-button buttonStyle uk-border-pill uk-margin-small-bottom" href="#modal-sections" uk-toggle style="width: 80%">Доставка</a>
+                        <div id="modal-sections" uk-modal>
+                            <div class="uk-modal-dialog">
+                                <button class="uk-modal-close-default" type="button" uk-close></button>
+                                <div class="uk-modal-header">
+                                    <h2 class="uk-modal-title">Информация о доставке</h2>
+                                </div>
+                                <div class="uk-modal-body">
+                                    <div class="">
+                                        <div class="uk-flex uk-margin-bottom">
+                                            <p class="uk-margin-remove">Продавец:</p>
+                                            <p style="margin: 0 0 0 5%">продавец_нэйм</p>
+                                        </div>
+                                        <div class="uk-flex uk-margin-bottom">
+                                            <p class="uk-margin-remove">Почта:</p>
+                                            <p style="margin: 0 0 0 5%">почта_продавца</p>
+                                        </div>
+                                        <div class="uk-flex">
+                                            <p class="uk-margin-remove">Доставка по адресу:</p>
+                                            <p style="margin: 0 0 0 5%">улица Пушкина дом Колотушкина</p>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
                     </div>
                     <div>
                         <button class="uk-button buttonStyle" style="width: 80%">Поддержка</button>
                     </div>
                 </div>
             </div>
-
-<!--            <div class="uk-flex-column uk-margin-top" style="margin-left: auto;">-->
-<!--                <h3 style="text-align: center">{{ task.price }} 12000 руб</h3>-->
-<!--                <button class="uk-button" style="background: #969696; border-radius: 5px">Отменить заказ</button>-->
-<!--            </div>-->
         </div>
     </div>
         {% endfor %}
@@ -136,75 +153,7 @@
         </div>
     </div>
         {% endfor %}
-
-
-
-
-
-
-
-
-
-
-<!--    <div class="accordion" id="accordionExample">-->
-<!--      <div class="accordion-item">-->
-<!--        <h2 class="accordion-header" id="headingOne">-->
-<!--          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">-->
-
-<!--                  <div class="d-flex container-fluid flex-row">-->
-
-<!--                      <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="60" height="48" class="d-inline-block align-text-top">-->
-
-<!--                      <h1 style="margin-left: 5%">{{ task.name }}</h1>-->
-
-<!--                  </div>-->
-
-<!--          </button>-->
-<!--        </h2>-->
-<!--        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">-->
-<!--          <div class="accordion-body">-->
-
-<!--            <div class="progress">-->
-
-<!--              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">в работе</div>-->
-
-<!--            </div>-->
-
-
-
-
-<!--            <dl class="row" style="margin-top: 2%">-->
-<!--              <dt class="col-sm-3">Описание</dt>-->
-<!--              <dd class="col-sm-9">{{ task.description }}</dd>-->
-
-<!--              <dt class="col-sm-3">Цена</dt>-->
-<!--              <dd class="col-sm-9">-->
-<!--                <div class="price">-->
-<!--                    {{ task.price }} ₽-->
-<!--                </div>-->
-
-<!--                <span class="badge rounded-pill bg-success">Оплачено</span>-->
-
-<!--                <span class="badge rounded-pill bg-danger">Не оплачено</span>-->
-<!--              </dd>-->
-
-<!--              <dt class="col-sm-3">Контакты продавца</dt>-->
-<!--              <dd class="col-sm-9">This definition is short, so no extra paragraphs or anything.</dd>-->
-
-
-
-<!--            </dl>-->
-
-
-
-
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    &lt;!&ndash; DJANGO for end here &ndash;&gt;-->
-
-
+    </div>
 </div>
 
 
