--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -178,7 +178,7 @@
                                 <div class="uk-flex">
                                         <p class="uk-margin-small-top">Адрес доставки:</p>
                                         <div class="uk-margin-left" style="width: 65%">
-                                            <input class="uk-input" id="form-stacked-text" type="text" placeholder="г.Москва, Ленинградский проезд 111, кв 101, 100102">
+                                            <input class="uk-input" name="address" id="form-stacked-text" type="text" placeholder="г.Москва, Ленинградский проезд 111, кв 101, 100102">
                                             <p class="uk-text-meta uk-margin-remove" style="font-size: 12px">Вводите адрес в формате: "г. Город, улица, кв, почтовый индекc"</p>
                                         </div>
                                 </div>
